# iFoRsRadio

./: CMakeLists.txt  README.md  resources.qrc
api/internal/: client.h
cmake/: utils.cmake
qml/: HomePage.qml  LogoPanel.qml  NavigationPanel.qml  RadioStationPage.qml  RoomsPage.qml  SettingsPage.qml  UNavigationButton.qml  main.qml
src/: main.cpp
src/core/: connectionmanager.cpp  connectionmanager.h  core.cpp  core.h
src/enums/: connectionstatus.h  pages.h
src/interface/: uinterface.cpp  uinterface.h
src/managers/ui/: uimanager.cpp  uimanager.h
src/models/list/: ulistmodel.cpp  ulistmodel.h
src/modules/radio/: radiocore.cpp  radiocore.h
src/network/: clientlistener.cpp  clientlistener.h  clientsender.cpp  clientsender.h
src/utils/: config.cpp  parameterhandler.cpp  parameterhandler.h  qmlregistration.cpp  qmlregistration.h
